--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "regions": ["iad1"],
   "functions": {
-    "app/api/generate/route.ts": {
+    "**/api/generate/**": {
       "maxDuration": 60
     }
   },
